[*] отключение смещения столбцов в main [+] начало добавления бд

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,14 @@
+# google table
 SHEET="название листа"
 SPREADSHEET="название таблицы"
 CREEDS_FILE_NAME=creds.json
+
+# wb tokens file names
 TOKENS_FILE_NAME=tokens.json
+
+# database psql
+DB_USER=user
+DB_PASSWORD=password
+DB_NAME=database
+DB_HOST=127.0.0.1
+DB_PORT=5432
