[+] добавление данных в accurate_npd_purchase_calculation

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ SHEET="название листа"
 SPREADSHEET="название таблицы"
 CREEDS_FILE_NAME=creds.json
 
+# purchase calculation spreadsheet
+PC_SHEET="MAIN"
+PC_SPREADSHEET="Расчет юнит"
+
 # wb tokens file names
 TOKENS_FILE_NAME=tokens.json
 
