--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ gspread~=6.1.2
 pandas~=2.2.2
 schedule~=1.2.2
 python-dotenv~=1.0.1
-aiohttp~=3.10.5
+aiohttp~=3.10.11
 asyncpg~=0.29.0
 structlog~=24.4.0
+apscheduler
