[*] изменил формат подсчета логистики int -> float

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ add_revenue_and_orders.py
 async_db_poligon.py
 database/app.log
 response_1731576340477.json
+russian_cities.json
+resut_data_city.json
